Add Util, UI, FXML Messages + CleanUp + Quality

--- a/org.jrebirth/core/src/main/resources/Messages_rb.properties
+++ b/org.jrebirth/core/src/main/resources/Messages_rb.properties
@@ -13,6 +13,8 @@ jrebirth.application.stoppedSuccessfully={0} has stopped successfully
 jrebirth.application.stopError=Error while stopping the application {0} : 
 jrebirth.application.cssLoadingError=Impossible to load CSS: {0} using folder: {1}/
 jrebirth.application.noCssDefined=No style sheet has been added to the scene, will link the default.css
+jrebirth.application.attachJatUeh=Attach JAT Uncaught Exception Handler
+jrebirth.application.attachJitUeh=Attach JIT Uncaught Exception Handler
 ##
 ###		DefaultApplication
 ##
@@ -30,6 +32,15 @@ jrebirth.parameter.readConfFile=Read configuration file : {0}
 jrebirth.parameter.updateParameter=Update key {0} with value= {1}
 jrebirth.parameter.storeParameter=Store key {0} with value= {1}
 jrebirth.parameter.confReadingError=Impossible to read the properties file : {0}
+##
+###################################################################################################
+##		Exception Handler Package
+###################################################################################################
+##
+####	AbstractJrbUncaughtExceptionHandler
+##
+jrebirth.exception.handler.uncaughtException=Uncaught Exception: {0}||Error||UNCAUGHT
+jrebirth.exception.handler.uncaughtException=Uncaught Exception: {0} - {1}||Error||UNCAUGHT
 ##
 ###################################################################################################
 ##		Concurrent Package
@@ -84,6 +95,9 @@ jrebirth.link.waveLostContext=Wave Lost [{1}]:  {0}
 ##
 jrebirth.link.customMethodNotFound=Custom method not found {0}
 jrebirth.link.waveDispatchError=Error while dispatching a wave
+jrebirth.link.listenWaveType=Listen {0} by {1}
+jrebirth.link.unlistenWaveType=UnListen {0} by {1}
+jrebirth.link.sendWave=Send Wave {0}
 ##
 ####	NotifierBase
 ##
@@ -98,6 +112,64 @@ jrebirth.link.modelNotFoundMessage=Cannot get the right Model to process the wav
 jrebirth.link.noWaveListener=No Listener attached for wave type : {0}
 jrebirth.link.notifierConsumes=NB consumes : {0}
 jrebirth.link.waveHandlingError=Error while handling a wave
+##
+#### Wave
+##
+jrebirth.link.waveBeanCreationError=Impossible to build WaveBean instance : {0}
+##
+###################################################################################################
+##		Service Package
+###################################################################################################
+##
+####	AbstractService
+##
+jrebirth.service.noWaveTypeDefined=Wave processed without any wave type for service {0}||Error||SERVICE
+##
+####	ServiceTaskReturnWaveListener
+##
+jrebirth.service.serviceTaskReturnConsumes={0} Consumes wave {1}||Trace||SERVICE
+##
+####	ServiceTask
+##
+jrebirth.service.noReturnedWaveConsumed={0} Consumes wave (noReturn) {1}||Error||SERVICE
+jrebirth.service.noReturnedWaveItem=The Return WaveType must contain at least one WaveItem to wrap the service return||Error||SERVICE
+jrebirth.service.serviceTaskError=Unable to perform the Service Task {0}||Error||SERVICE
+##
+###################################################################################################
+##		UI Package
+###################################################################################################
+##
+####	AbstractView
+##
+jrebirth.ui.creationFailure={0} creation has failed||Error||UI
+jrebirth.ui.viewAnnoProcessingFailure=Impossible to process annotation for root node : {0}||Warn||UI
+jrebirth.ui.nodeAnnoProcessingFailure=Impossible to process annotation for Node property : {0}-{1}||Warn||UI
+jrebirth.ui.animAnnoProcessingFailure=Impossible to process annotation for Animation property : {0}-{1}||Warn||UI
+##
+####	AnnotationEventHandler
+##
+jrebirth.ui.noEventCallback={0} must have a method => void {1} ({2} event)\{\}
+jrebirth.ui.eventHandlingImpossible=Impossible to handle the event||Error||UI
+##
+##
+###################################################################################################
+##		UI FXML Package
+###################################################################################################
+##
+####	FXMLUtils
+##
+jrebirth.ui.fxml.missingResourceBundle=Resource Bundle is missing: {0}||Error||FXML
+jrebirth.ui.fxml.fxmlErrorNodeLabel=FXML Error : {0}
+jrebirth.ui.fxml.fxmlNodeDoesntExist=The FXML node doesn't exist : {0}
+jrebirth.ui.fxml.badFxmlControllerAncestor=The FXML controller must extends the FXMLController class : {0}
+##
+####	AbstractFXMLController
+##
+jrebirth.ui.fxml.initFxmlNode=Initialize fxml node : {0}||Trace||FXML
+##
+####	DefaultFXMLControllerBuilder
+##
+jrebirth.ui.fxml.defaultCtrlrCreationError=Initialize fxml node : {0}||Trace||FXML
 ##
 ###################################################################################################
 ##		Util Package
