Improve JIT, add HPTP Fix #45 #76 #77

--- a/org.jrebirth/core/src/main/resources/Messages_rb.properties
+++ b/org.jrebirth/core/src/main/resources/Messages_rb.properties
@@ -50,7 +50,8 @@ jrebirth.exception.handler.uncaughtException=Uncaught Exception: {0} - {1}||Erro
 ##
 jrebirth.concurrent.runIt=Run> {0}
 jrebirth.concurrent.threadError=Thread error : {0} 
-jrebirth.concurrent.jtpQueued=Runnable submitted with hashCode={0}
+jrebirth.concurrent.jtpQueued=Runnable submitted to JTP with hashCode={0}
+jrebirth.concurrent.hptpQueued=Runnable submitted to HPTP with hashCode={0}
 jrebirth.concurrent.bootUpError=An exception occured during JRebirth BootUp
 ##
 ####	AbstractJrbRunnable
