Various change, improve wave type handler

--- a/org.jrebirth/core/src/main/resources/Messages_rb.properties
+++ b/org.jrebirth/core/src/main/resources/Messages_rb.properties
@@ -1,4 +1,5 @@
 ###################################################################################################
+###################################################################################################
 ##		Application Package
 ###################################################################################################
 ##
@@ -102,7 +103,7 @@ jrebirth.link.sendWave=Send Wave {0}
 ##
 ####	NotifierBase
 ##
-jrebirth.link.useDefaultWaveHandler=Impossible to load the UnprocessedWaveHandler , will use the default one
+jrebirth.link.useDefaultWaveHandler=Impossible to load the UnprocessedWaveHandler, will use the default one
 jrebirth.link.waveSendingError=Failed to send Wave
 jrebirth.link.commandNotFoundError=Cannot get the right Command to process the wave : {0}
 jrebirth.link.commandNotFoundMessage=Cannot get the right Command to process the wave
@@ -178,6 +179,7 @@ jrebirth.ui.fxml.defaultCtrlrCreationError=Initialize fxml node : {0}||Trace||FX
 ##
 ####	CheckerUtility
 ##
+jrebirth.util.waveHandlerMethodRequired={0} must have a method => void {1} ({2}, Wave wave)\{\}
 jrebirth.util.brokenApiNoMethod={0} API is broken, no method {1} is available
 jrebirth.util.brokenApiWrongParameters={0} API is broken, the method {1} has wrong parameters, expected:{2}  provided:{3}
 ##
