--- a/org.jrebirth/core/src/main/resources/Messages_rb.properties
+++ b/org.jrebirth/core/src/main/resources/Messages_rb.properties
@@ -49,16 +49,16 @@ jrebirth.exception.handler.uncaughtException=Uncaught Exception: {0} - {1}||Erro
 ##
 ####	JRebirthThread
 ##
-jrebirth.concurrent.runIt=Run> {0}
-jrebirth.concurrent.threadError=Thread error : {0} 
 jrebirth.concurrent.jtpQueued=Runnable submitted to JTP with hashCode={0}
 jrebirth.concurrent.hptpQueued=Runnable submitted to HPTP with hashCode={0}
 jrebirth.concurrent.bootUpError=An exception occured during JRebirth BootUp
+jrebirth.concurrent.jitError=An exception occurred into the JRebirth Thread
+jrebirth.concurrent.shutdownError=An error occurred while shutting down the application \
 ##
 ####	AbstractJrbRunnable
 ##
-jrebirth.concurrent.jitError=An exception occurred into the JRebirth Thread
-jrebirth.concurrent.shutdownError=An error occurred while shutting down the application 
+jrebirth.concurrent.runIt=Run> {0}
+jrebirth.concurrent.threadError=Thread error : {0}
 ##
 ####	JRebirthThreadPoolExecutor
 ##
