Fix #85, bad message when api is broken

--- a/org.jrebirth/core/src/main/resources/Messages_rb.properties
+++ b/org.jrebirth/core/src/main/resources/Messages_rb.properties
@@ -179,7 +179,7 @@ jrebirth.ui.fxml.defaultCtrlrCreationError=Initialize fxml node : {0}||Trace||FX
 ##
 ####	CheckerUtility
 ##
-jrebirth.util.waveHandlerMethodRequired={0} must have a method => void {1} ({2}, Wave wave)\{\}
+jrebirth.util.waveHandlerMethodRequired={0} must have a method => void {1} ({2}, Wave wave)'{}'
 jrebirth.util.brokenApiNoMethod={0} API is broken, no method {1} is available
 jrebirth.util.brokenApiWrongParameters={0} API is broken, the method {1} has wrong parameters, expected:{2}  provided:{3}
 ##
