Manage Custom KeyGenerator annotation

--- a/org.jrebirth/core/src/main/resources/Messages_rb.properties
+++ b/org.jrebirth/core/src/main/resources/Messages_rb.properties
@@ -5,7 +5,7 @@
 ##
 ####	AbstractApplication
 ##
-jrebirth.application.startApplication=Starting {0}
+jrebirth.application.startApplication=Starting {0}||Error||APPLICATION
 jrebirth.application.startedSuccessfully={0} has started successfully
 jrebirth.application.initError=Error while initializing the application {0} : 
 jrebirth.application.startError=Error while starting the application {0} : 
@@ -41,7 +41,7 @@ jrebirth.parameter.confReadingError=Impossible to read the properties file : {0}
 ####	AbstractJrbUncaughtExceptionHandler
 ##
 jrebirth.exception.handler.uncaughtException=Uncaught Exception: {0}||Error||UNCAUGHT
-jrebirth.exception.handler.uncaughtException=Uncaught Exception: {0} - {1}||Error||UNCAUGHT
+jrebirth.exception.handler.unknownUncaughtException=Uncaught Exception: {0} - {1}||Error||UNCAUGHT
 ##
 ###################################################################################################
 ##		Concurrent Package
@@ -83,6 +83,21 @@ jrebirth.facade.jrebirthEvent=JREvent>>{0}
 ####	AbstractFacade
 ##
 jrebirth.facade.componentRetrievalError=Component Retrieval Error
+##
+###################################################################################################
+##		Key Package
+###################################################################################################
+##
+####	MultitonKey
+##
+jrebirth.key.noKeyGeneratorMethod=No KeyGenerator method found ({0}) for type {1}||Error||KEY
+jrebirth.key.keyGeneratorFailure=Fail to generate the key for method: {0} of {1}||Error||KEY
+jrebirth.key.methodKeyGeneratorFailure=Fail to generate the method key for method: {0} of type {1}||Error||KEY
+jrebirth.key.methodNotFound=Method not found: {0} for type {1}||Error||KEY
+jrebirth.key.nullMethodKey=The method key returned is null for method: {0} of type {1}||Warn||KEY
+jrebirth.key.noToStringKeyMethod=No toString method found for the returned object of ({0}) of type {1}||Error||KEY
+jrebirth.key.methodKeyToStringFailure=Fail to stringify the returned key of the method {0} of type {1}||Error||KEY
+jrebirth.key.nullMethodKeyString=The string of the method key returned is null for method: {0} of type {1}||Warn||KEY
 ##
 ###################################################################################################
 ##		Link Package
@@ -182,6 +197,8 @@ jrebirth.ui.fxml.defaultCtrlrCreationError=Initialize fxml node : {0}||Trace||FX
 jrebirth.util.waveHandlerMethodRequired={0} must have a method => void {1} ({2}, Wave wave)'{}'
 jrebirth.util.brokenApiNoMethod={0} API is broken, no method {1} is available
 jrebirth.util.brokenApiWrongParameters={0} API is broken, the method {1} has wrong parameters, expected:{2}  provided:{3}
+jrebirth.util.brokenWaveSent=Broken Wave sent : {0}||Error||UTIL
+jrebirth.util.brokenWaveBadItemList=This wave must provide these items: {0}
 ##
 ####	ClasspathUtility
 ##
