Manage Wave Checker

--- a/org.jrebirth/core/src/main/resources/Messages_rb.properties
+++ b/org.jrebirth/core/src/main/resources/Messages_rb.properties
@@ -5,7 +5,7 @@
 ##
 ####	AbstractApplication
 ##
-jrebirth.application.startApplication=Starting {0}||Error||APPLICATION
+jrebirth.application.startApplication=Starting {0}
 jrebirth.application.startedSuccessfully={0} has started successfully
 jrebirth.application.initError=Error while initializing the application {0} : 
 jrebirth.application.startError=Error while starting the application {0} : 
