Fix #69 Improve object command and fix an issue when retrieving the model object of a component that have several key parts

--- a/org.jrebirth/core/src/main/resources/Messages_rb.properties
+++ b/org.jrebirth/core/src/main/resources/Messages_rb.properties
@@ -153,6 +153,10 @@ jrebirth.service.noReturnedWaveItem=The Return WaveType must contain at least on
 jrebirth.service.serviceTaskError=Unable to perform the Service Task {0}||Error||SERVICE
 jrebirth.service.serviceTaskHasFailed={0} experience a service task failure for wave {1}
 ##
+###    ServiceUtility
+##
+jrebirth.service.countLinesError=Impossible to count lines for file: {0}||Error||SERVICE
+##
 ###################################################################################################
 ##		UI Package
 ###################################################################################################
