--- a/org.jrebirth.af/core/src/main/resources/Messages_rb.properties
+++ b/org.jrebirth.af/core/src/main/resources/Messages_rb.properties
@@ -115,6 +115,7 @@ jrebirth.link.waveDispatchError=Error while dispatching a wave
 jrebirth.link.listenWaveType=Listen {0} by {1}
 jrebirth.link.unlistenWaveType=UnListen {0} by {1}
 jrebirth.link.sendWave=Send Wave {0}
+jrebirth.link.callAnnotatedMethodError=Error while trying to call annoated method {0} for component {1}||Error||LINK
 ##
 ####	NotifierBase
 ##
