Fixes #110 Add default method on eventAdapter to throw a runtime exception if an event is missed ! Remove FinishedAdapter to remap FinishHandler to ActionAdapter

--- a/org.jrebirth.af/core/src/main/resources/Messages_rb.properties
+++ b/org.jrebirth.af/core/src/main/resources/Messages_rb.properties
@@ -194,6 +194,16 @@ jrebirth.ui.fxml.initFxmlNode=Initialize fxml node : {0}||Trace||FXML
 ##
 jrebirth.ui.fxml.defaultCtrlrCreationError=Initialize fxml node : {0}||Trace||FXML
 ##
+##
+##
+###################################################################################################
+##		UI Adapter Package
+###################################################################################################
+##
+####	EventAdapter
+##
+jrebirth.ui.adapter.notImplementedYet=The class {0} shall implement the method : {1}
+##
 ###################################################################################################
 ##		Util Package
 ###################################################################################################
