Fix issue when env var is not found
Conflicts:
	org.jrebirth.af/core/src/test/java/org/jrebirth/af/core/resource/parameter/ParameterTest.java

--- a/org.jrebirth.af/core/src/main/resources/Messages_rb.properties
+++ b/org.jrebirth.af/core/src/main/resources/Messages_rb.properties
@@ -33,6 +33,7 @@ jrebirth.parameter.readConfFile=Read configuration file : {0}
 jrebirth.parameter.updateParameter=Update key {0} with value= {1}
 jrebirth.parameter.storeParameter=Store key {0} with value= {1}
 jrebirth.parameter.confReadingError=Impossible to read the properties file : {0}
+jrebirth.parameter.undefinedEnvVar=Undefined Environment Variable : {0}
 ##
 ###################################################################################################
 ##		Exception Handler Package
