Allow to scan Java Webstart classpath Fix #128
Conflicts:
	org.jrebirth.af/core/pom.xml

--- a/org.jrebirth.af/core/src/main/resources/Messages_rb.properties
+++ b/org.jrebirth.af/core/src/main/resources/Messages_rb.properties
@@ -222,6 +222,10 @@ jrebirth.util.brokenWaveBadItemList=This wave must provide these items: {0}
 jrebirth.util.resourceIgnored=The resource {0} is ignored from classpath search engine (not a zip|jar|directory)
 jrebirth.util.badCanonicalPath=Impossible to get the resource canonical path
 jrebirth.util.fileUnreadable=Impossible to read the file
+jrebirth.util.useJNLPClassLoader=Use JNLPClassLoader to search properties files
+jrebirth.util.parseCachedJarFile=Parse Cached Jar File [{0}] for resource [{1}]
+jrebirth.util.cantReadCachedJarFile=Can not read Cached Jar File : {0}
+jrebirth.util.useDefaultClassLoader=Use Default ClassLoader to search properties files
 ##
 ####	ClassUtility
 ##
