Another Quality Pass
Conflicts:
	org.jrebirth.af/core/src/main/java/org/jrebirth/af/core/link/AbstractWaveReady.java
	org.jrebirth.af/core/src/main/java/org/jrebirth/af/core/link/ComponentEnhancer.java
	org.jrebirth.af/core/src/main/java/org/jrebirth/af/core/link/NotifierBase.java
	org.jrebirth.af/core/src/main/java/org/jrebirth/af/core/resource/image/ImageBuilder.java
	org.jrebirth.af/core/src/main/java/org/jrebirth/af/core/resource/parameter/ParameterBuilder.java

--- a/org.jrebirth.af/core/src/main/resources/Messages_rb.properties
+++ b/org.jrebirth.af/core/src/main/resources/Messages_rb.properties
@@ -136,6 +136,9 @@ jrebirth.link.waveHandlingError=Error while handling a wave
 ##
 jrebirth.link.waveBeanCreationError=Impossible to build WaveBean instance : {0}
 ##
+### ComponentEnhancer
+jrebirth.link.componentInjectionFailure=Component {0} injection has failed
+##
 ###################################################################################################
 ##		Service Package
 ###################################################################################################
