Refactor API to avoid cycle

--- a/org.jrebirth.af/core/src/main/resources/Messages_rb.properties
+++ b/org.jrebirth.af/core/src/main/resources/Messages_rb.properties
@@ -84,6 +84,7 @@ jrebirth.facade.jrebirthEvent=JREvent>>{0}
 ####	AbstractFacade
 ##
 jrebirth.facade.componentRetrievalError=Component Retrieval Error
+jrebirth.facade.unlistenAllError=Error while unlistening all WaveType for {0}.||Error||FACADE
 ##
 ###################################################################################################
 ##		Key Package
