--- a/org.jrebirth.af/core/src/main/resources/Messages_rb.properties
+++ b/org.jrebirth.af/core/src/main/resources/Messages_rb.properties
@@ -52,7 +52,7 @@ jrebirth.exception.handler.unknownUncaughtException=Uncaught Exception: {0} - {1
 ##
 jrebirth.concurrent.jtpQueued=Runnable submitted to JTP with hashCode={0}
 jrebirth.concurrent.hptpQueued=Runnable submitted to HPTP with hashCode={0}
-jrebirth.concurrent.bootUpError=An exception occured during JRebirth BootUp
+jrebirth.concurrent.bootUpError=An exception occurred during JRebirth BootUp
 jrebirth.concurrent.jitError=An exception occurred into the JRebirth Thread
 jrebirth.concurrent.shutdownError=An error occurred while shutting down the application \
 ##
