Add ServiceException that can be handled by ServiceTask

--- a/org.jrebirth.af/core/src/main/resources/Messages_rb.properties
+++ b/org.jrebirth.af/core/src/main/resources/Messages_rb.properties
@@ -158,6 +158,7 @@ jrebirth.service.serviceTaskReturnConsumes={0} Consumes wave {1}||Trace||SERVICE
 jrebirth.service.noReturnedWaveConsumed={0} Consumes wave (noReturn) {1}||Trace||SERVICE
 jrebirth.service.noReturnedWaveItem=The Return WaveType must contain at least one WaveItem to wrap the service return||Error||SERVICE
 jrebirth.service.serviceTaskError=Unable to perform the Service Task {0}||Error||SERVICE
+jrebirth.service.serviceTaskException={0} - thrown by the Service Task {1}||Warn||SERVICE
 jrebirth.service.serviceTaskHasFailed={0} experience a service task failure for wave {1}
 ##
 ###    ServiceUtility
