Fix #142 Add onException method on WaveType to manage custom exception handling

--- a/org.jrebirth.af/core/src/main/resources/Messages_rb.properties
+++ b/org.jrebirth.af/core/src/main/resources/Messages_rb.properties
@@ -159,6 +159,8 @@ jrebirth.service.noReturnedWaveConsumed={0} Consumes wave (noReturn) {1}||Trace|
 jrebirth.service.noReturnedWaveItem=The Return WaveType must contain at least one WaveItem to wrap the service return||Error||SERVICE
 jrebirth.service.serviceTaskError=Unable to perform the Service Task {0}||Error||SERVICE
 jrebirth.service.serviceTaskException={0} - thrown by the Service Task {1}||Warn||SERVICE
+jrebirth.service.serviceTaskHandleException={0} - thrown by the Service Task {1} and handled with a Wave
+jrebirth.service.serviceTaskNotManagedException={0} - thrown by the Service Task {1} and not managed||Warn||SERVICE
 jrebirth.service.serviceTaskHasFailed={0} experience a service task failure for wave {1}
 ##
 ###    ServiceUtility
