The status of returned wave was never set to "Handle"

--- a/org.jrebirth.af/core/src/main/resources/Messages_rb.properties
+++ b/org.jrebirth.af/core/src/main/resources/Messages_rb.properties
@@ -132,6 +132,7 @@ jrebirth.link.modelNotFoundError=Cannot get the right Model to process the wave 
 jrebirth.link.modelNotFoundMessage=Cannot get the right Model to process the wave
 jrebirth.link.noWaveListener=No Listener attached for wave type : {0}
 jrebirth.link.notifierConsumes=NB consumes : {0}
+jrebirth.link.notifierHandles=NB handles : {0}
 jrebirth.link.waveHandlingError=Error while handling a wave
 ##
 #### Wave
@@ -152,6 +153,7 @@ jrebirth.service.noWaveTypeDefined=Wave processed without any wave type for serv
 ####	ServiceTaskReturnWaveListener
 ##
 jrebirth.service.serviceTaskReturnConsumes={0} Consumes wave {1}||Trace||SERVICE
+jrebirth.service.serviceTaskReturnHandles={0} Handles wave {1}||Trace||SERVICE
 ##
 ####	ServiceTask
 ##
