--- a/org.jrebirth.af/core/src/main/resources/Messages_rb.properties
+++ b/org.jrebirth.af/core/src/main/resources/Messages_rb.properties
@@ -77,7 +77,6 @@ jrebirth.facade.componentBuildError=Impossible to build the the component {0}
 ##
 ####	GlobalFacadeBase
 ##
-jrebirth.facade.componentFactoryError=Impossible to load the custom ComponentFactory, will use the default one
 jrebirth.facade.jtpCreation=Create the JRebirth Thread Pool
 jrebirth.facade.jrebirthEvent=JREvent>>{0}
 ##
@@ -122,7 +121,6 @@ jrebirth.link.componentReleaseError=Error while trying to release the component 
 ##
 ####	NotifierBase
 ##
-jrebirth.link.useDefaultWaveHandler=Impossible to load the UnprocessedWaveHandler, will use the default one
 jrebirth.link.waveSendingError=Failed to send Wave
 jrebirth.link.commandNotFoundError=Cannot get the right Command to process the wave : {0}
 jrebirth.link.commandNotFoundMessage=Cannot get the right Command to process the wave
@@ -192,6 +190,7 @@ jrebirth.ui.eventHandlingImpossible=Impossible to handle the event||Error||UI
 ##
 ####	FXMLUtils
 ##
+jrebirth.ui.fxml.fxmlControllerFactoryError=Impossible to load the custom FXMLControllerFactory, will use the default one||Error||FXML
 jrebirth.ui.fxml.missingResourceBundle=Resource Bundle is missing: {0}||Error||FXML
 jrebirth.ui.fxml.fxmlErrorNodeLabel=FXML Error : {0}
 jrebirth.ui.fxml.fxmlNodeDoesntExist=The FXML node doesn't exist : {0}
@@ -246,4 +245,8 @@ jrebirth.util.argumentDetail={0} = {1}
 jrebirth.util.noConstructor=Impossible to retrieve the constructor due to security
 jrebirth.util.noAnnotationProperty=Impossible to find the annotation property : {0}
 jrebirth.util.noAnnotationPropertyValue=Impossible to retrieve value for the annotation property : {0}
+##
+###    Parameter Utility
+##
+jrebirth.util.customClassLoadingError=Impossible to load the custom {0}, will use the default one
 ##
