Fix #213 Review WaveHandler errors and fix the usage of processWave

--- a/org.jrebirth.af/core/src/main/resources/Messages_rb.properties
+++ b/org.jrebirth.af/core/src/main/resources/Messages_rb.properties
@@ -111,7 +111,7 @@ jrebirth.link.waveLostContext=Wave Lost [{1}]:  {0}
 ##
 ####	AbstractComponent
 ##
-jrebirth.link.customMethodNotFound=Custom method not found {0}
+jrebirth.link.customMethodNotFound=Custom method not found
 jrebirth.link.waveDispatchError=Error while dispatching a wave
 jrebirth.link.listenWaveType=Listen {0} by {1}
 jrebirth.link.unlistenWaveType=UnListen {0} by {1}
