Fix bad message formatting

--- a/org.jrebirth.af/core/src/main/resources/Messages_rb.properties
+++ b/org.jrebirth.af/core/src/main/resources/Messages_rb.properties
@@ -180,7 +180,7 @@ jrebirth.ui.animAnnoProcessingFailure=Impossible to process annotation for Anima
 ##
 ####	AnnotationEventHandler
 ##
-jrebirth.ui.noEventCallback={0} must have a method => void {1} ({2} event)\{\}
+jrebirth.ui.noEventCallback={0} must have a method => void {1} ({2} event)'{}'
 jrebirth.ui.eventHandlingImpossible=Impossible to handle the event||Error||UI
 ##
 ##
