Manage runtimeException to catch more finely exceptions from Command

--- a/org.jrebirth.af/core/src/main/resources/Messages_rb.properties
+++ b/org.jrebirth.af/core/src/main/resources/Messages_rb.properties
@@ -141,6 +141,15 @@ jrebirth.link.waveBeanCreationError=Impossible to build WaveBean instance : {0}
 jrebirth.link.componentInjectionFailure=Component {0} injection has failed
 ##
 ###################################################################################################
+##		Command Package
+###################################################################################################
+##
+####	CommandRunnable
+##
+jrebirth.command.cmdException=CommandException:
+jrebirth.command.unplannedFailure=Unplanned failure while performing command :||Error||CMD
+##
+###################################################################################################
 ##		Service Package
 ###################################################################################################
 ##
